cabecera en HTML

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,14 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Blog post de ejemplo</h1>
-    <p>parrafo de inicio</p>
+    <div id="container">
+        <div id="cabecera">
+            CABECERA
+        <div id ="post"></div>
+            <h1>Titulo de prueba de la ramas</h1>
+            <p>ejercicio sobre branch o ramas en GIT</p>
+        </div>
+
+    </div>
 </body>
 </html>
