--- a/blogpost.html
+++ b/blogpost.html
@@ -6,10 +6,11 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            CABECERA
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
         <div id ="post"></div>
             <h1>Titulo de prueba de la ramas</h1>
-            <p>ejercicio sobre branch o ramas en GIT</p>
+            <p>ejercicio sobre branch o ramas en GIT realizado en Platzi</p>
         </div>
 
     </div>
