--- a/blogpost.html
+++ b/blogpost.html
@@ -6,5 +6,7 @@
 <body>
     <h1>Blog post de ejemplo</h1>
     <p>parrafo de inicio</p>
+    <p>Parrafo de prueba sobre angus y sus cuidados</p>
+
 </body>
 </html>
