blog V2.0 con ssh

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Mi blog con prueba de github</title>
+    <title>Mi blog con prueba de github V 2.0</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
