--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,9 @@
             <h1>Titulo de prueba de la ramas</h1>
             <p>ejercicio sobre branch o ramas en GIT realizado en Platzi</p>
         </div>
+        <div id="footer">
+            Rama de ejemplo Footer
+        </div>
 
     </div>
 </body>
