--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
             Hyperblog
             <span id="tagline">Tu blog de confianza</span>
         <div id ="post"></div>
-            <h1>Titulo de prueba de la ramas</h1>
+            <h1>Título de prueba de la ramas</h1>
             <p>ejercicio sobre branch o ramas en GIT realizado en Platzi</p>
         </div>
         <div id="footer">
