--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id ="post"></div>
             <h1>Título de prueba de la ramas</h1>
             <p>ejercicio sobre branch o ramas en GIT realizado en Platzi</p>
-            <p><img src="imagenes/sesto.jpg" width="100%"></p>
+            <p><img src="https://i.postimg.cc/yxHkcxc4/sesto.webp" width="100%"></p>
         </div>
         <div id="footer">
             Rama de ejemplo Footer
